# yisus-c-style

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  dynstr.h  string.c  string.h  types.h  types.hpp  util.h
src/tools/: CMakeLists.txt  cproj.c
tests/: CMakeLists.txt  t_string.c
